# automacro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
automacro/: __init__.py
automacro/_utils/: __init__.py  logger.py
automacro/animate/: __init__.py  easing.py  interpolate.py
automacro/clipboard/: __init__.py  manager.py
automacro/core/: __init__.py  coordinates.py  thread_pool.py
automacro/keyboard/: __init__.py  char.py  controller.py  key.py  key_input.py  key_sequence.py  listener.py  modifier_key.py  normalize.py
automacro/mouse/: __init__.py  controller.py  listener.py  mouse_button.py
automacro/screen/: __init__.py  _utils.py  capture.py  color.py  coordinates.py  image.py  types.py
automacro/screen/ocr/: __init__.py  api.py  base.py  factory.py  tesseract.py
automacro/utils/: __init__.py
automacro/workflow/: __init__.py  base.py  breakpoint.py  conditional.py  context.py  control.py  errors.py  exceptions.py  hooks.py  sleep.py  state.py  task.py  workflow.py
tests/: conftest.py
tests/workflow/: test_base.py  test_breakpoint.py  test_context.py  test_control.py  test_workflow.py
